--- a/dome/index.html
+++ b/dome/index.html
@@ -7,7 +7,9 @@
 </head>
 <body>
     <script src="index.js">
-        
+        document.body.onclick = function(){
+    
+}
     </script>
 </body>
 </html>
