--- a/dome/index.html
+++ b/dome/index.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="UTF-8">
-    <title>Document</title>
-    <link rel="stylesheet" href="index.css">
-</head>
-<body>
-    <script src="index.js">
-        document.body.onclick = function(){
-    alert(1);
-}
-    </script>
-</body>
+	<head>
+		<meta charset="utf-8" />
+		<title></title>
+		<link rel="stylesheet" type="text/css" href="css/index.css"/>
+	</head>
+	<body>
+		<div id="lxz">
+			
+		</div>
+		<script>
+			var asd = document.getElementById('lxz');
+            asd.onclick = function(){
+	        asd.style.backgroundColor="yellow";
+            }
+		</script>
+	</body>
 </html>
