--- a/9-21作业.html
+++ b/9-21作业.html
@@ -8,19 +8,19 @@
     <script>
 			var a = '123456789';
 			var b = '123456';
-			var c = '10000';
+			var c = 1000000;
 			do{
 				var a1 = prompt('请输入您的银行卡号');
 				var b1 = prompt('请输入密码');
 				if(a1==a &&b1==b){
 				   var c2=prompt('请输入取款金额','卡内余额为'+c)
-				   if(c2<=c) {
+				    if(c2<=c){
 					   alert('您的余额为'+(c-c2));
-				   }else{
+				    }else{
 					   alert('卡内余额不足请从新输入金额数');
 					   c2=prompt("请从新输入取款金额");
 					   alert('您的余额为'+(c-c2));
-					  }
+					 }
 				}else{
 					confirm('输入错误，请重新输入');
 				}
