--- a/9.25-作业/new_file.html
+++ b/9.25-作业/new_file.html
@@ -45,7 +45,7 @@
         text-align: right;
     }
     li:nth-child(odd):after {
-        content: ':聂浩';
+        content: '奥沙利文：';
         font-size: 20px;
         color: red;
     }
@@ -53,7 +53,7 @@
         text-align: left;
     }
     li:nth-child(even):before {
-        content: '哈士奇:';
+        content: '丁俊晖:';
         font-size: 20px;
         color: blue;
     }
